# headhunter-automation

./: .gitignore  README.md  docker-compose.yml
app/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/auth/: oauth.py  state.py
app/bot/commands/: connect.py  filters.py  menu.py
app/bot/handlers/: choices.py  menu.py
app/bot/middlewares/: auth.py
app/config/: settings.py
app/hh/: client.py
app/services/: job_processor.py
app/storage/: sqlite_impl.py
app/tasks/: scheduler.py
